# nats_service

./: .env  Cargo.toml  docker-compose.yaml
.sqlx/: query-5476551788f8b88d805f6ea3834efd27ee31fc48c63d9c75359d8aee378de619.json  query-acd8b4c71bb5b86d798c0b70647fe3035d5277625f57302046571b1372c6d527.json  query-f1a132ee7470cde1a4013d60497f2454e1160d78288236d23564bd4a9ad138cd.json
lib/message/: Cargo.toml  handler.rs  mod.rs
services/counter/: .env  Cargo.toml
services/counter/migrations/: 20240317025635_init.sql
services/counter/src/: main.rs
services/counter/src/handlers/: errors.rs  handler_count.rs  handler_decrement.rs  handler_increment.rs  json.rs  mod.rs
services/counter/src/repo/: mod.rs
services/counter/src/repo/mem/: mod.rs
services/counter/src/repo/pg/: mod.rs
src/: main.rs
src/handlers/: errors.rs  handler_count.rs  handler_decrement.rs  handler_increment.rs  hello_world.rs  hello_world2.rs  json.rs  mod.rs
src/message/: handler.rs  mod.rs  server.rs
