[workspace]
members = ["services/*", "lib/*"]
resolver = "2"
[workspace.package]
rust-version = "1.76"
edition = "2021"

[workspace.dependencies]
async-nats = "0.33.0"
axum = "0.7.4"
bytes = { version = "1.5", features = ["serde"] }
futures = "0.3.28"
serde = "1.0.196"
serde_json = "1.0.113"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
thiserror = "1.0.57"
tokio = { version = "1", features = ["full"] }

# local dependencies
message = { path = "lib/message" }
