[package]
name = "message"
version = "0.1.0"
authors = ["rob"]
edition = "2021"

[lib]
name = "message"
path = "mod.rs"

[dependencies]
async-nats.workspace = true
axum.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
