[package]
name = "counter"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
async-nats.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
message.workspace = true
